# 1D_Heat_Adjoint

./: .gitmodules  CMakeLists.txt  m  main.cpp  r
src/main/: CoreIncludes.hpp
src/main/core/: definesEigen.hpp  logger.cpp  logger.hpp
src/main/mesh/: mesh.cpp  mesh.hpp  polynomials.cpp  polynomials.hpp
src/main/physics/: integrator.hpp
src/main/solver/: CG.hpp
